--- a/src/components/order-block/elements/order-size/OrderSize.module.scss
+++ b/src/components/order-block/elements/order-size/OrderSize.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 6 * $d8x-spacing;
 
   .label {
     display: flex;
